<resources>
    <string name="app_name">Books World</string>
    <string name="all">All</string>
    <string name="art">Art</string>
    <string name="fantasy">Fantasy</string>
    <string name="biographies">Biographies</string>
    <string name="science">Science</string>
    <string name="recipes">Recipes</string>
    <string name="romance">Romance</string>
    <string name="religion">Religion</string>
    <string name="mystery">Mystery</string>
    <string name="music">Music</string>
    <string name="medicine">Medicine</string>
    <string name="plays">Plays</string>
    <string name="history">History</string>
    <string name="children">Children</string>
    <string name="science_f">ScienceFiction</string>
    <string name="textbooks">TextBooks</string>
    <string name="my_books">My Books</string>
    <string name="sample">Hellooooo ALL Boook</string>
    <string name="number_of_pages">Number of pages:</string>
    <string name="view_book">View Book</string>
    <string name="search">search</string>
    <string name="bookmark">bookmark</string>
    <string name="back">back</string>
    <string name="photo">photo</string>
</resources>
