<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_appbar">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white" />

    <HorizontalScrollView
        android:id="@+id/l_chips"
        android:layout_below="@id/title"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/art_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/art"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/fantasy_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fantasy"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/biographies_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biographies"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/science_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/science"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/recipes_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipes"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/romance_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/romance"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/religion_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/religion"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/mystery_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mystery"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/music_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/medicine_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicine"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/plays_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plays"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/history_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/children_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/children"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/science_f_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/science_f"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/textbooks_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textbooks"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:alpha="0.8"/>

        </com.google.android.material.chip.ChipGroup>



    </HorizontalScrollView>
</RelativeLayout>