<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    Icons From https://icons8.com/  -->

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_book">

        <ImageView
            android:id="@+id/bookmark"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/bookmark"
            android:src="@drawable/bookmark_add" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="136dp"
            android:layout_height="210dp"
            android:layout_below="@id/back"
            android:layout_alignParentStart="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/photo" />

        <TextView
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bookmark"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_toEndOf="@id/photo"
            android:fontFamily="@font/dekko"
            android:text=""
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_title"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_toEndOf="@id/photo"
            android:fontFamily="@font/dekko"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/author"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_toEndOf="@id/photo"
            android:fontFamily="@font/dekko"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/page_num_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/category"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@id/photo"
            android:fontFamily="@font/dekko"
            android:text="@string/number_of_pages"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/page_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/category"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="24dp"
            android:layout_toEndOf="@id/page_num_title"
            android:fontFamily="@font/dekko"
            android:text=""
            android:textColor="@color/white"
            android:textSize="14sp" />

        <!--        <com.willy.ratingbar.ScaleRatingBar-->
        <!--            xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--            android:id="@+id/rb"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@id/page_num"-->
        <!--            android:layout_marginStart="24dp"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:layout_marginBottom="24dp"-->
        <!--            android:layout_toEndOf="@id/photo"-->
        <!--            app:srb_clearRatingEnabled="false"-->
        <!--            app:srb_clickable="false"-->
        <!--            app:srb_isIndicator="false"-->
        <!--            app:srb_minimumStars="1"-->
        <!--            app:srb_numStars="5"-->
        <!--            app:srb_rating="2"-->
        <!--            app:srb_scrollable="false"-->
        <!--            app:srb_starHeight="15dp"-->
        <!--            app:srb_starPadding="2dp"-->
        <!--            app:srb_starWidth="15dp"-->
        <!--            app:srb_stepSize="0.5"/>-->


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_appbar"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/useless"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <RelativeLayout
            android:id="@+id/view_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/useless">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_book"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/dekko"/>
        </RelativeLayout>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layout"
        android:background="@drawable/bg_descr"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:padding="10dp"
        android:scrollbars="none">

        <TextView
            android:id="@+id/descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dekko"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp" />
    </ScrollView>

</RelativeLayout>